argocd/v2.7.11/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "5"
    kubernetes.io/ingress.class: nginx
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - host: argocd.example.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        pathType: ImplementationSpecific
  tls:
  - secretName: argo-ingress-tls
